--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "seeder": "node utils/seeder"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "mongoose": "^5.12.10",
     "next": "10.2.2",
+    "next-absolute-url": "^1.2.2",
     "next-connect": "^0.10.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
