--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.4",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
