--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.12.10",
     "next": "10.2.2",
     "next-absolute-url": "^1.2.2",
+    "next-auth": "^3.24.0",
     "next-connect": "^0.10.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
