--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-# /config/next.config.js
+/next.config.js/
 
 # testing
 /coverage
@@ -12,6 +12,7 @@
 # next.js
 /.next/
 /out/
+
 
 # production
 /build
